--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Larry/Documents/CS108/Assignment/Vooga/golden_0_2_3.jar"/>
+	<classpathentry kind="lib" path="/Users/FR/Documents/workspace/GTGE/golden_0_2_3.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/FR/Documents/workspace/GTGE/docs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
